--- a/page/API/pages/all-trade-list-detail-borrow/all-trade-list-detail-borrow.wxml
+++ b/page/API/pages/all-trade-list-detail-borrow/all-trade-list-detail-borrow.wxml
@@ -19,8 +19,8 @@
             <text style="margin-right: 30rpx;">总计</text>
             <text style="margin-right: 60rpx;color: #CC0000;">{{detail.amount}}<text style="color: #C5C5C5;">件商品</text></text>
             <text style="margin-right: 100rpx;color: #CC0000;">￥{{detail.price}}</text>
-            <text style="margin-right: 50rpx;color: #C5C5C5;">已卖<text style="color: #CC0000;">{{item.soldAmount?item.soldAmount:'0'}}</text>件商品</text>
-            <text style="margin-right: 50rpx;color: #CC0000;">￥{{item.soldPrice?item.soldPrice:'0'}}</text>
+            <text style="margin-right: 50rpx;color: #C5C5C5;">已卖<text style="color: #CC0000;">{{detail.soldAmount?detail.soldAmount:'0'}}</text>件商品</text>
+            <text style="margin-right: 50rpx;color: #CC0000;">￥{{detail.soldPrice?detail.soldPrice:'0'}}</text>
         </view>
     </view>
     <view class="content">
