--- a/page/API/pages/all-trade-list-detail/all-trade-list-detail.wxss
+++ b/page/API/pages/all-trade-list-detail/all-trade-list-detail.wxss
@@ -63,6 +63,7 @@
 .contact-left {
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 .contact-avatar {
     width: 60rpx;
