--- a/page/API/pages/message/message.wxss
+++ b/page/API/pages/message/message.wxss
@@ -1,7 +1,7 @@
 @import "/page/common/css/modal.wxss";
 .all-screen {
     width: 100%;
-    height: 100%;
+    min-height: 100%;
     background-color: #fff;
 }
 .content {
