--- a/page/API/pages/my-info-person/my-info-person.wxml
+++ b/page/API/pages/my-info-person/my-info-person.wxml
@@ -1,7 +1,8 @@
 <scroll-view class='all-screen' wx:if="{{userType == '1'}}">
     <view class="header">
         <view class='getPhone-avatar-border' style="width: 100%;height: 200rpx;padding-bottom: 20rpx;">
-            <open-data class='getPhone-avatar' style="display: block;width: 178rpx;height: 178rpx;margin-top: 83rpx;" type="userAvatarUrl"></open-data>
+            <!--<open-data class='getPhone-avatar' style="display: block;width: 178rpx;height: 178rpx;margin-top: 83rpx;" type="userAvatarUrl"></open-data>-->
+            <image class='getPhone-avatar' style="display: block;width: 178rpx;height: 178rpx;margin-top: 83rpx;" src="{{infoData.icon}}"></image>
         </view>
         <view class="header-name">
             <text style="font-size: 34rpx;">{{infoData.nickName}}</text>
@@ -32,7 +33,8 @@
 <scroll-view class='all-screen' wx:if="{{userType == '2'}}">
     <view class="header">
         <view class='getPhone-avatar-border' style="width: 100%;height: 200rpx;padding-bottom: 20rpx;">
-            <open-data class='getPhone-avatar' style="display: block;width: 178rpx;height: 178rpx;margin-top: 83rpx;" type="userAvatarUrl"></open-data>
+            <!--<open-data class='getPhone-avatar' style="display: block;width: 178rpx;height: 178rpx;margin-top: 83rpx;" type="userAvatarUrl"></open-data>-->
+            <image class='getPhone-avatar' style="display: block;width: 178rpx;height: 178rpx;margin-top: 83rpx;" src="{{infoData.icon}}"></image>
         </view>
         <view class="header-name">
             <text style="font-size: 34rpx;">{{infoData.nickName}}</text>
@@ -59,7 +61,8 @@
 <scroll-view class='all-screen' wx:if="{{userType == '3'}}">
     <view class="header">
         <view class='getPhone-avatar-border' style="width: 100%;height: 200rpx;padding-bottom: 20rpx;">
-            <open-data class='getPhone-avatar' style="display: block;width: 178rpx;height: 178rpx;margin-top: 83rpx;" type="userAvatarUrl"></open-data>
+            <!--<open-data class='getPhone-avatar' style="display: block;width: 178rpx;height: 178rpx;margin-top: 83rpx;" type="userAvatarUrl"></open-data>-->
+            <image class='getPhone-avatar' style="display: block;width: 178rpx;height: 178rpx;margin-top: 83rpx;" src="{{infoData.icon}}"></image>
         </view>
         <view class="header-name">
             <text style="font-size: 34rpx;">{{infoData.nickName}}</text>
