--- a/page/API/pages/all-trade-list-borrow/all-trade-list-borrow.wxml
+++ b/page/API/pages/all-trade-list-borrow/all-trade-list-borrow.wxml
@@ -17,7 +17,8 @@
         <view class="con-list" wx:for="{{tradeList}}" wx:key="{{item.number}}" data-check-path="{{item.checkPath}}" bindtap="goToDetail">
             <view class="list-top">
                 <view class="top-img">
-                    <image class="img-item" wx:for="{{item.goodsList}}" wx:for-index="index1" wx:for-item="item1" wx:key="{{item1.hash}}" src="{{item1.imageUrl}}" wx:if="{{index1<5}}"></image>
+                    <!--<image class="img-item" wx:for="{{item.goodsList}}" wx:for-index="index1" wx:for-item="item1" wx:key="{{item1.hash}}" src="{{item1.imageUrl}}" wx:if="{{index1<5}}"></image>-->
+                    <view class="img-item" wx:for="{{item.goodsList}}" wx:for-index="index1" wx:for-item="item1" wx:key="{{item1.hash}}" wx:if="{{index1<5}}" style="background: url({{item1.imageUrl}}) center no-repeat;background-size: {{item1.backgroundSize ? 'auto 100%' : '100% auto'}}"></view>
                     <!--<image class="img-item" src="../../../../image/wechat.png"></image>-->
                     <!--<image class="img-item" src="../../../../image/wechat.png"></image>-->
                     <!--<image class="img-item" src="../../../../image/wechat.png"></image>-->
@@ -27,7 +28,8 @@
                 <view class="top-number" wx:if="{{type==='1'}}">{{item.amount}}件</view>
                 <view class="top-center" wx:else>
                     <view class="center-number">总计{{item.amount}}件</view>
-                    <view class="center-number">已卖 {{item.soldAmount}}件</view>
+                    <view class="center-number" wx:if="{{type==='4'}}">已卖 {{item.soldAmount}}件</view>
+                    <view class="center-number" wx:else>待还 {{item.notReturnAmount}}件</view>
                 </view>
                 <view class="top-amount">￥{{item.price}}</view>
             </view>
@@ -50,9 +52,13 @@
 </view>
 
 <view class='all-screen' hidden='{{!showError}}'>
-    <view class='auth-top-border'>
+    <view class='auth-top-border' wx:if="{{!showNull}}">
         <text class='auth-text'>网络错误，请重试</text>
         <text class='auth-text'></text>
     </view>
     <!--<button class='auth-button' bindtap='retry'>重试</button>-->
+    <view class='auth-top-border' wx:esle>
+        <text class='auth-text'>暂无订单</text>
+        <text class='auth-text'></text>
+    </view>
 </view>
