--- a/page/API/pages/all-trade-list-detail-borrow/all-trade-list-detail-borrow.wxml
+++ b/page/API/pages/all-trade-list-detail-borrow/all-trade-list-detail-borrow.wxml
@@ -1,3 +1,4 @@
+
 <view class="all-screen" hidden='{{showError}}'>
     <view class="header">
         <view>订单号:{{detail.number}}</view>
@@ -30,7 +31,11 @@
 
                 <view class="list-left">
                     <checkbox value="{{index}}" checked="{{item.selected}}" wx:if="{{(item.state==='借出中'||item.state==='逾期')&&isSelect}}" />
-                    <image class="list-img" src="{{item.imageUrl}}"></image>
+                    <!--<image class="list-img" src="{{item.imageUrl}}"></image>-->
+                    <view class="list-img" style="background: url({{item.imageUrl}}) center no-repeat;background-size: {{item.backgroundSize ? 'auto 100%' : '100% auto'}}"></view>
+                    <!--<view style="position: relative" class="list-img">-->
+                        <!--<image style="position: absolute;" class="imageDom"></image>-->
+                    <!--</view>-->
                     <view class="{{item.state==='借出中'?'list-state':item.state==='已卖'?'list-state one':item.state==='已还'?'list-state two':item.state==='逾期'?'list-state three':'list-state'}}">{{item.state==='借出中'?'':item.state}}</view>
                 </view>
 
