--- a/page/API/pages/all-trade-list-detail-borrow/all-trade-list-detail-borrow.wxss
+++ b/page/API/pages/all-trade-list-detail-borrow/all-trade-list-detail-borrow.wxss
@@ -15,6 +15,7 @@
     font-size: 30rpx;
     border-bottom: 1px solid #f2f2f2;
     color: #C5C5C5;
+    align-items: center;
 }
 .header-more {
     width: 100%;
@@ -61,6 +62,7 @@
 .contact-left {
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 .contact-avatar {
     width: 60rpx;
