--- a/page/API/pages/all-trade-list-detail/all-trade-list-detail.wxml
+++ b/page/API/pages/all-trade-list-detail/all-trade-list-detail.wxml
@@ -4,6 +4,13 @@
         <view>订单号:{{detail.number}}</view>
         <view>{{detail.createTime}}</view>
     </view>
+    <view class="header-contact">
+        <view class="contact-left">
+            <image class="contact-avatar" src="{{detail.lendAvatarUrl}}"></image>
+            <view style="margin-left: 30rpx;color: #c5c5c5;">{{detail.lenderName}}</view>
+        </view>
+        <!--<view style="margin-right: 30rpx;">{{detail.state}}</view>-->
+    </view>
     <view class="header-more">
         <view class="more-left">
             <view class="left-top" hidden="{{!detail.returnTime}}">预计归还：{{detail.returnTime}}</view>
@@ -18,7 +25,8 @@
     <view class="content">
         <view class="con-list" wx:for="{{detail.goodsList}}" wx:key="{{item.hash}}">
             <!--<image class="list-img" src="../../../../image/wechat.png"></image>-->
-            <image class="list-img" src="{{item.imageUrl}}"></image>
+            <!--<image class="list-img" src="{{item.imageUrl}}"></image>-->
+            <view class="list-img" style="background: url({{item.imageUrl}}) center no-repeat;background-size: {{item.backgroundSize ? 'auto 100%' : '100% auto'}}"></view>
             <view>￥{{item.price}}</view>
         </view>
     </view>
