--- a/page/API/pages/all-trade-list-detail/all-trade-list-detail.wxss
+++ b/page/API/pages/all-trade-list-detail/all-trade-list-detail.wxss
@@ -16,6 +16,7 @@
     font-size: 24rpx;
     border-bottom: 2px solid #f2f2f2;
     color: #C5C5C5;
+    align-items: center;
 }
 .header-more {
     width: 100%;
